# pydantic-fixturegen

./: .gitignore  CHANGELOG.md  README.md  coverage.json  pyproject.toml  temp.md
.github/workflows/: ci.yml  release.yml
docs/: alternatives.md  api.md  cli.md  configuration.md  cookbook.md  description.md  design.md  doctor.md  emitters.md  examples.md  explain.md  features.md  index.md  install.md  kitgrid.yaml  logging.md  output-paths.md  presets.md  providers.md  quickstart.md  requirements.md  seeds.md  tasks.md  testing.md  troubleshooting.md  vscode.md
docs/commands/: index.md  pfg-coverage.md  pfg-gen-dataset.md  pfg-gen-fixtures.md  pfg-gen-json.md  pfg-gen-seed-beanie.md  pfg-gen-seed-sqlmodel.md  pfg-persist.md  pfg-snapshot-verify.md  pfg-verify.md
docs/example-projects/customer-analytics/: pyproject.toml
docs/example-projects/customer-analytics/models/: events.py  identity.py  segments.py  shared.py
docs/example-projects/customer-analytics/samples/: segments_strategies.py
docs/example-projects/fastapi-marketplace/: pyproject.toml
docs/example-projects/fastapi-marketplace/app/: __init__.py  config.py
docs/example-projects/fastapi-marketplace/app/api/: __init__.py
docs/example-projects/fastapi-marketplace/app/api/routes/: orders.py
docs/example-projects/fastapi-marketplace/app/models/: customer.py  shared.py
docs/example-projects/fastapi-marketplace/tests/fixtures/: test_orders.py
pydantic_fixturegen/: __init__.py  _warnings.py  logging.py
pydantic_fixturegen/anonymize/: pipeline.py
pydantic_fixturegen/api/: __init__.py  _runtime.py  models.py
pydantic_fixturegen/cli/: __init__.py  anonymize.py  check.py  coverage.py  diff.py  doctor.py  fastapi.py  init.py  list.py  lock.py  persist.py  plugin.py  polyfactory.py  snapshot.py  verify.py  watch.py
pydantic_fixturegen/core/: __init__.py  ast_discover.py  config.py  config_schema.py  constraint_report.py  errors.py  extra_types.py  forward_refs.py  generate.py  heuristics.py  introspect.py  io_utils.py  model_utils.py  openapi.py  privacy_profiles.py  provider_defaults.py  providers.py  safe_import.py  schema.py  schema_ingest.py  strategies.py
pydantic_fixturegen/core/providers/: __init__.py  collections.py  identifiers.py  numbers.py  numpy_arrays.py  paths.py  registry.py  strings.py  temporal.py
pydantic_fixturegen/emitters/: __init__.py  json_out.py  pytest_codegen.py  schema_out.py
pydantic_fixturegen/fastapi_support/: loader.py  mock.py  smoke.py
pydantic_fixturegen/hypothesis/: exporter.py
pydantic_fixturegen/orm/: sqlalchemy.py
pydantic_fixturegen/persistence/: handlers.py  models.py  registry.py  runner.py
pydantic_fixturegen/plugins/: builtin.py  hookspecs.py
pydantic_fixturegen/polyfactory_support/: discovery.py  migration.py  migration_helpers.py  runtime.py
pydantic_fixturegen/schemas/: config.schema.json
pydantic_fixturegen/testing/: __init__.py  pytest_plugin.py  snapshot.py
tests/: conftest.py
tests/anonymize/: test_pipeline.py
tests/api/: test_api_generate.py  test_generate.py  test_models_dataclasses.py  test_runtime_generate.py  test_runtime_helpers.py
tests/cli/: test_anonymize_cli.py  test_anonymize_helpers.py  test_check.py  test_cli_entrypoint.py  test_cli_errors.py  test_common_helpers.py  test_coverage.py  test_diff.py  test_diff_branches.py  test_doctor.py  test_explain.py  test_gen_common.py  test_gen_dataset.py  test_gen_examples.py  test_gen_fixtures.py  test_gen_json.py  test_gen_openapi.py  test_gen_polyfactory.py  test_gen_schema.py  test_gen_seed.py  test_gen_seed_helpers.py  test_gen_strategies.py  test_help_output.py  test_init.py  test_list.py  test_logging.py  test_persist.py  test_plugin.py  test_polyfactory_migrate.py  test_schema_config.py  test_seed_freeze_cli.py  test_snapshot_cli.py  test_watch_mode.py
tests/core/: test_collection_utils.py  test_config.py  test_constraint_reporter.py  test_errors.py  test_extra_type_providers.py  test_field_overrides.py  test_forward_refs.py  test_generate.py  test_io_utils.py  test_openapi_helpers.py  test_openapi_utils.py  test_overrides.py  test_path_template.py  test_privacy_profiles.py  test_provider_defaults.py  test_provider_identifiers.py  test_provider_numbers.py  test_provider_numpy_arrays.py  test_provider_paths.py  test_provider_strings.py  test_providers.py  test_safe_import.py  test_schema_constraints.py  test_schema_ingest.py  test_strategies.py  test_version.py
tests/coverage/: test_manifest.py
tests/e2e/: test_cli_workflows.py  test_determinism.py
tests/emitters/: test_json_out.py  test_pytest_codegen.py  test_pytest_codegen_styles.py  test_schema_out.py
tests/fastapi/: test_fastapi_cli.py
tests/hypothesis/: test_exporter_helpers.py
tests/orm/: test_sqlalchemy_helpers.py
tests/persistence/: test_registry.py  test_runner.py
tests/plugins/: test_hooks.py
tests/polyfactory/: test_discovery.py  test_migration_helpers.py  test_runtime.py
tests/providers/: test_collections_additional.py  test_numbers_additional.py  test_paths_additional.py  test_strings_additional.py
tests/security/: test_sandbox.py
tests/testing/: test_pytest_plugin_helpers.py  test_pytest_snapshot_helpers.py  test_snapshot_helper.py  test_snapshot_module_helpers.py  test_snapshot_runner.py
tmp_cli/: models.py  out.json
