[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "pydantic-fixturegen"
version = "0.0.1"
description = "Deterministic fixture generator for Pydantic models."
requires-python = ">=3.10,<3.14"
readme = "README.md"
authors = [{ name = "Fixturegen Developers" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
  "faker>=24.0.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
]
lint = [
  "ruff>=0.6.5",
]
test = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
]
docs = []
all-dev = [
  "mypy>=1.11",
  "ruff>=0.6.5",
  "pytest>=8.3",
  "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/casper-kristiansson/pydantic-fixturegen"
Documentation = "https://github.com/casper-kristiansson/pydantic-fixturegen"
Repository = "https://github.com/casper-kristiansson/pydantic-fixturegen"

[tool.pytest.ini_options]
addopts = [
  "-q",
  "--strict-config",
  "--strict-markers",
  "--maxfail=1",
  "-Werror",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["pydantic_fixturegen"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]
fail_under = 90
precision = 2
show_missing = true
skip_empty = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_unused_configs = true
namespace_packages = true

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["pydantic_fixturegen", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
]
ignore = [
  "E203",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
